--- a/UnicodeInfo.glyphsPlugin/Contents/Info.plist
+++ b/UnicodeInfo.glyphsPlugin/Contents/Info.plist
@@ -13,17 +13,17 @@
 	<key>CFBundleName</key>
 	<string>UnicodeInfo</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.2</string>
+	<string>1.0.3</string>
 	<key>CFBundleVersion</key>
-	<string>6</string>
+	<string>7</string>
 	<key>UpdateFeedURL</key>
 	<string>https://raw.githubusercontent.com/jenskutilek/UnicodeInfo-Glyphs/master/UnicodeInfo.glyphsPalette/Contents/Info.plist</string>
 	<key>productPageURL</key>
 	<string>https://github.com/jenskutilek/UnicodeInfo-Glyphs</string>
 	<key>productReleaseNotes</key>
-	<string>Fix a crash when a font is opened</string>
+	<string>Use external unicode info module</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright, Jens Kutilek, 2016-2022</string>
+	<string>Copyright, Jens Kutilek, 2016-2024</string>
 	<key>NSPrincipalClass</key>
 	<string>UnicodeInfo</string>
 	<key>PyMainFileNames</key>
