--- a/UnicodeInfo.glyphsPlugin/Contents/Info.plist
+++ b/UnicodeInfo.glyphsPlugin/Contents/Info.plist
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleExecutable</key>
-	<string>plugin</string>
-	<key>CFBundleIdentifier</key>
-	<string>de.kutilek.unicodeinfo</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>UnicodeInfo</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.1.0</string>
-	<key>CFBundleVersion</key>
-	<string>8</string>
-	<key>UpdateFeedURL</key>
-	<string>https://raw.githubusercontent.com/jenskutilek/UnicodeInfo-Glyphs/master/UnicodeInfo.glyphsPalette/Contents/Info.plist</string>
-	<key>productPageURL</key>
-	<string>https://github.com/jenskutilek/UnicodeInfo-Glyphs</string>
-	<key>productReleaseNotes</key>
-	<string>New data source Hyperglot, more options in UI</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright, Jens Kutilek, 2016-2024</string>
-	<key>NSPrincipalClass</key>
-	<string>UnicodeInfo</string>
-	<key>PyMainFileNames</key>
-	<array>
-		<string>plugin.py</string>
-	</array>
-</dict>
+	<dict>
+		<key>CFBundleDevelopmentRegion</key>
+		<string>en</string>
+		<key>CFBundleExecutable</key>
+		<string>plugin</string>
+		<key>CFBundleIdentifier</key>
+		<string>de.kutilek.unicodeinfo</string>
+		<key>CFBundleInfoDictionaryVersion</key>
+		<string>6.0</string>
+		<key>CFBundleName</key>
+		<string>UnicodeInfo</string>
+		<key>CFBundleShortVersionString</key>
+		<string>1.2.0</string>
+		<key>CFBundleVersion</key>
+		<string>9</string>
+		<key>UpdateFeedURL</key>
+		<string>
+			https://raw.githubusercontent.com/jenskutilek/UnicodeInfo-Glyphs/master/UnicodeInfo.glyphsPalette/Contents/Info.plist</string>
+		<key>productPageURL</key>
+		<string>https://github.com/jenskutilek/UnicodeInfo-Glyphs</string>
+		<key>productReleaseNotes</key>
+		<string>New data source Hyperglot, more options in UI</string>
+		<key>NSHumanReadableCopyright</key>
+		<string>Copyright, Jens Kutilek, 2016-2025</string>
+		<key>NSPrincipalClass</key>
+		<string>UnicodeInfo</string>
+		<key>PyMainFileNames</key>
+		<array>
+			<string>plugin.py</string>
+		</array>
+	</dict>
 </plist>
